toolchain/ouro_tokenize/snapshots/ouro_tokenize_test__t-3.snap
---
source: toolchain/ouro_tokenize/ouro_tokenize_test.rs
expression: "pprint_tokenize(\"a *\")"
---
Ident 0..1 
Whitespace 1..2 
Star 2..3
