toolchain/ouro_tokenize/snapshots/ouro_tokenize_test__t-5.snap
---
source: toolchain/ouro_tokenize/ouro_tokenize_test.rs
expression: "pprint_tokenize(\"a 1_000_000 123 _123\")"
---
Ident 0..1 
Whitespace 1..2 
IntLit 2..11 
Whitespace 11..12 
IntLit 12..15 
Whitespace 15..16 
Ident 16..20
