toolchain/ouro_tokenize/snapshots/ouro_tokenize_test__t-6.snap
---
source: toolchain/ouro_tokenize/ouro_tokenize_test.rs
expression: "pprint_tokenize(\"123😎\")"
---
IntLit 0..3 
Unrecognized 3..7
