toolchain/ouro_tokenize/snapshots/ouro_tokenize_test__t.snap
---
source: toolchain/ouro_tokenize/ouro_tokenize_test.rs
expression: "pprint_tokenize(\"fn f(x) { 4 + 3 * x } \")"
---
Fn 0..2 
Whitespace 2..3 
Ident 3..4 
OpenParen 4..5 
Ident 5..6 
CloseParen 6..7 
Whitespace 7..8 
OpenBrace 8..9 
Whitespace 9..10 
IntLit 10..11 
Whitespace 11..12 
Plus 12..13 
Whitespace 13..14 
IntLit 14..15 
Whitespace 15..16 
Star 16..17 
Whitespace 17..18 
Ident 18..19 
Whitespace 19..20 
CloseBrace 20..21 
Whitespace 21..22
