toolchain/ouro_tokenize/snapshots/ouro_tokenize_test__valid_binary_numbers-2.snap
---
source: toolchain/ouro_tokenize/ouro_tokenize_test.rs
expression: "pprint_tokenize(\"0b1010_1010\")"
---
IntLit 0..11
