toolchain/ouro_tokenize/snapshots/ouro_tokenize_test__valid_binary_numbers-4.snap
---
source: toolchain/ouro_tokenize/ouro_tokenize_test.rs
expression: "pprint_tokenize(\"0b_0\")"
---
IntLit 0..4
