toolchain/ouro_tokenize/snapshots/ouro_tokenize_test__valid_binary_numbers.snap
---
source: toolchain/ouro_tokenize/ouro_tokenize_test.rs
expression: "pprint_tokenize(\"0b1010\")"
---
IntLit 0..6
